# handhold

./: .gitignore  README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
courses/dijkstra/: handhold.yaml  lesson.md
courses/express-api/: handhold.yaml  lesson.md
docs/: authoring-guide.md
docs/plans/: 2026-02-15-handhold-design.md  2026-02-16-piper-tts.md  2026-02-17-course-browser-design.md  2026-02-22-course-editor-design.md  2026-02-23-studio-canvas-design.md
scripts/: download-piper.sh  download-sidecars.sh  install-handhold.ps1  install-handhold.sh  install.sh  kokoro-tts.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: container.rs  course.rs  db.rs  fs.rs  git.rs  lib.rs  lsp.rs  main.rs  paths.rs  preview.rs  pty.rs  runner.rs  search.rs  settings.rs  shell_env.rs  tts.rs  watcher.rs
src-tauri/src/course/: download.rs  import.rs  mod.rs  progress.rs  queries.rs  source.rs  sync.rs  types.rs
src-tauri/src/tts/: bundle.rs  cache.rs  commands.rs  mod.rs  paths.rs  split.rs  synth.rs  timing.rs  wav.rs
src-tauri/windows/: hooks.nsh
src/app/: theme.ts
src/browser/: Browser.tsx  CourseCard.tsx  ImportDialog.tsx  tauri.ts  use-courses.ts  use-route.ts
src/chart/: Chart.tsx  chart-transform.ts
src/code/: Code.tsx  CodeLine.tsx  CodeTokens.tsx  code-diff.ts  split-tokens.ts  token-diff.ts  use-shiki.ts
src/course/: CourseNavBar.tsx  DependencyModal.tsx  load-lesson.ts  use-course.ts
src/data/: Data.tsx  DataEdge.tsx  DataNode.tsx  DataPointer.tsx  array-ids.ts  layout-types.ts
src/diagram/: Diagram.tsx  DiagramEdge.tsx  DiagramGroup.tsx  DiagramNode.tsx  aws-icon-registry.ts  elk-layout.ts  layout.ts  tech-icon-registry.ts
src/lab/: ActivityBar.tsx  BottomPanel.tsx  CommandPalette.tsx  ContainerInstallPrompt.tsx  DiagnosticsPanel.tsx  Editor.tsx  EditorArea.tsx  EditorTabs.tsx  ExplorerPanel.tsx  FileExplorer.tsx  FileExplorerNode.tsx  GoToLineDialog.tsx  InstructionsPanel.tsx  Lab.tsx  LabLayout.tsx  ProvisioningView.tsx  SearchPanel.tsx  ServicePanel.tsx  SettingsPanel.tsx  SidebarContent.tsx  SolutionPanel.tsx  StatusBar.tsx  TerminalPanel.tsx  TerminalTab.tsx  TerminalTabs.tsx  TestRunnerPanel.tsx  command-registry.ts  compose.ts  diagnostics-store.ts  editor-cursor-store.ts  file-icons.tsx  monaco-lang.ts  monaco-models.ts  monaco-workers.ts  parse-lab.ts  presets.ts  settings-store.ts  store.ts  tap-parser.ts  use-auto-save.ts  (+14 more)
src/math/: Math.tsx  math-layout.ts  use-katex.ts
src/parser/: build-scenes.ts  parse-animation.ts  parse-chart.ts  parse-data.ts  parse-diagram.ts  parse-lesson.ts  parse-math.ts  parse-preview.ts  parse-regions.ts  parse-seq.ts
src/presentation/: Controls.tsx  NarrationText.tsx  Presentation.tsx  ScrubBar.tsx  Sidebar.tsx  Stage.tsx  animation-variants.ts  store.ts  (+5 more)
(+143 files in other folders)
