[package]
name = "handhold"
version = "0.2.3"
description = "Interactive course platform"
authors = ["dutchcaz"]
edition = "2021"
default-run = "handhold"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
dirs = "6"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
notify = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
serde_yml = "0.0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
regex = "1"
oxc_allocator = "0.115"
oxc_parser = "0.115"
oxc_semantic = "0.115"
oxc_transformer = "0.115"
oxc_codegen = "0.115"
oxc_span = "0.115"
tar = "0.4"
flate2 = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
codegen-units = 16
